Bug 378531 - KScreenlocker does not support custom hotkeys for layout switching
Summary: KScreenlocker does not support custom hotkeys for layout switching
Status: RESOLVED FIXED
Alias: None
Product: kscreenlocker
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.5.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-07 10:28 UTC by Mike Krutov
Modified: 2017-12-21 15:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Krutov 2017-04-07 10:28:15 UTC
My configuration in system-settings keyboard module defines 3 layouts:

- US
- Czech
- Russian.

I use custom per-layout hotkeys (meta-shift-{1,2,3}) to switch layouts. 

This hotkeys are not available in KScreenLocker, so if I lock screen with let's say russian layout - my two resorts are either $setxkbmap from other tty either switching layout via mouse clicks.

What I'd expect is to have that hotkeys active in KScreenLocker as well.
Comment 1 Kai Uwe Broulik 2017-04-07 10:46:41 UTC
Patch https://phabricator.kde.org/D5331
Comment 2 Mike Krutov 2017-04-07 11:01:32 UTC
Wow, that was fast. Thank you!
Comment 3 Kai Uwe Broulik 2017-12-21 15:30:19 UTC
Git commit 4180796cd389b7f77da96307d6254cb0ea62e99f by Kai Uwe Broulik.
Committed on 21/12/2017 at 15:29.
Pushed by broulik into branch 'master'.

Whitelist Switch keyboard layout to shortcuts

This changes the whitelist to be a QRegularExpression to allow for more sophisticated whitelisting.
An expression matching "Switch keyboard layout to .*" has been added.
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D5331

M  +17   -15   globalaccel.cpp

https://commits.kde.org/kscreenlocker/4180796cd389b7f77da96307d6254cb0ea62e99f