Whitelist Switch keyboard layout to shortcuts

This changes the whitelist to be a QRegularExpression to allow for more sophisticated whitelisting.
An expression matching "Switch keyboard layout to .*" has been added.

BUG: 378531
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D5331